// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table ColumnSetting 🎏 change text by renderText 1`] = `"Edward King2144"`;

exports[`Table ColumnSetting 🎏 columns proFieldProps support custom 1`] = `
<div
  class="ant-pro"
>
  <div
    class="ant-pro-table"
  >
    <div
      class="ant-pro-card ant-pro-table-search ant-pro-table-search-query-filter"
    >
      <div
        class="ant-pro"
      >
        <form
          autocomplete="off"
          class="ant-form ant-form-horizontal ant-pro-form-query-filter"
        >
          <input
            style="display: none;"
            type="text"
          />
          <div
            class="ant-row ant-row-start"
            style="margin-left: -12px; margin-right: -12px;"
          >
            <div
              class="ant-col ant-col-8"
              style="padding-left: 12px; padding-right: 12px;"
            >
              <div
                class="ant-form-item"
                style="flex-wrap: nowrap;"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label"
                    style="flex: 0 0 80px;"
                  >
                    <label
                      class=""
                      for="name"
                      title="Name"
                    >
                      Name
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                    style="max-width: calc(100% - 80px);"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          class="ant-select ant-select-in-form-item ant-pro-filed-search-select ant-select-single ant-select-allow-clear ant-select-show-arrow"
                          style="width: 100%;"
                        >
                          <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="name_list_0"
                                aria-autocomplete="list"
                                aria-controls="name_list"
                                aria-haspopup="listbox"
                                aria-owns="name_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="name"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-placeholder"
                            >
                              请选择
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            class="ant-select-arrow"
                            style="user-select: none;"
                            unselectable="on"
                          >
                            <span
                              aria-label="down"
                              class="anticon anticon-down ant-select-suffix"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-8 ant-col-offset-8"
              style="padding-left: 12px; padding-right: 12px; text-align: right;"
            >
              <div
                class="ant-form-item pro-form-query-filter-actions"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label"
                  >
                    <label
                      class="ant-form-item-no-colon"
                      title=" "
                    >
                       
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center"
                              style="flex-wrap: wrap; margin-bottom: -8px;"
                            >
                              <div
                                class="ant-space-item"
                                style="margin-right: 8px; padding-bottom: 8px;"
                              >
                                <button
                                  class="ant-btn ant-btn-default"
                                  type="button"
                                >
                                  <span>
                                    重 置
                                  </span>
                                </button>
                              </div>
                              <div
                                class="ant-space-item"
                                style="padding-bottom: 8px;"
                              >
                                <button
                                  class="ant-btn ant-btn-primary"
                                  type="button"
                                >
                                  <span>
                                    查 询
                                  </span>
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="ant-pro-card"
    >
      <div
        class="ant-pro-card-body"
        style="padding-top: 0px;"
      >
        <div
          class="ant-pro-table-list-toolbar"
        >
          <div
            class="ant-pro-table-list-toolbar-container"
          >
            <div
              class="ant-pro-table-list-toolbar-left"
            />
            <div
              class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
            >
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-setting-items"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <div
                      class="ant-pro-table-list-toolbar-setting-item"
                    >
                      <span>
                        <span
                          aria-label="reload"
                          class="anticon anticon-reload"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="reload"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <div
                      class="ant-pro-table-list-toolbar-setting-item"
                    >
                      <span>
                        <span
                          aria-label="column-height"
                          class="anticon anticon-column-height ant-dropdown-trigger"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="column-height"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M840 836H184c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h656c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zm0-724H184c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h656c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zM610.8 378c6 0 9.4-7 5.7-11.7L515.7 238.7a7.14 7.14 0 00-11.3 0L403.6 366.3a7.23 7.23 0 005.7 11.7H476v268h-62.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V378h62.8z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="ant-pro-table-list-toolbar-setting-item"
                    >
                      <span
                        aria-label="setting"
                        class="anticon anticon-setting"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="setting"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-table-wrapper"
        >
          <div
            class="ant-spin-nested-loading"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="ant-table ant-table-middle ant-table-empty"
              >
                <div
                  class="ant-table-container"
                >
                  <div
                    class="ant-table-content"
                  >
                    <table
                      style="table-layout: auto;"
                    >
                      <colgroup />
                      <thead
                        class="ant-table-thead"
                      >
                        <tr>
                          <th
                            class="ant-table-cell"
                          >
                            Name
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="ant-table-tbody"
                      >
                        <tr
                          class="ant-table-placeholder"
                        >
                          <td
                            class="ant-table-cell"
                          >
                            <div
                              class="ant-empty ant-empty-normal"
                            >
                              <div
                                class="ant-empty-image"
                              >
                                <svg
                                  height="41"
                                  viewBox="0 0 64 41"
                                  width="64"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <g
                                    fill="none"
                                    fill-rule="evenodd"
                                    transform="translate(0 1)"
                                  >
                                    <ellipse
                                      cx="32"
                                      cy="33"
                                      fill="#F5F5F5"
                                      rx="32"
                                      ry="7"
                                    />
                                    <g
                                      fill-rule="nonzero"
                                      stroke="#D9D9D9"
                                    >
                                      <path
                                        d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                      />
                                      <path
                                        d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                        fill="#FAFAFA"
                                      />
                                    </g>
                                  </g>
                                </svg>
                              </div>
                              <div
                                class="ant-empty-description"
                              >
                                暂无数据
                              </div>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table ColumnSetting 🎏 config provide render 1`] = `
<div
  class="ant-pro"
>
  <div
    class="qixian-pro-table"
  >
    <div
      class="qixian-pro-card qixian-pro-table-search qixian-pro-table-search-query-filter"
    >
      <div
        class="ant-pro"
      >
        <form
          autocomplete="off"
          class="qixian-form qixian-form-horizontal qixian-pro-form-query-filter"
        >
          <input
            style="display: none;"
            type="text"
          />
          <div
            class="qixian-row qixian-row-start"
            style="margin-left: -12px; margin-right: -12px;"
          >
            <div
              class="qixian-col qixian-col-8"
              style="padding-left: 12px; padding-right: 12px;"
            >
              <div
                class="qixian-form-item"
                style="flex-wrap: nowrap;"
              >
                <div
                  class="qixian-row qixian-form-item-row"
                >
                  <div
                    class="qixian-col qixian-form-item-label"
                    style="flex: 0 0 80px;"
                  >
                    <label
                      class=""
                      for="name"
                      title="Name"
                    >
                      Name
                    </label>
                  </div>
                  <div
                    class="qixian-col qixian-form-item-control"
                    style="max-width: calc(100% - 80px);"
                  >
                    <div
                      class="qixian-form-item-control-input"
                    >
                      <div
                        class="qixian-form-item-control-input-content"
                      >
                        <span
                          class="qixian-input-affix-wrapper"
                          style="width: 100%;"
                        >
                          <input
                            class="qixian-input"
                            id="name"
                            placeholder="请输入"
                            type="text"
                            value=""
                          />
                          <span
                            class="qixian-input-suffix"
                          >
                            <span
                              class="qixian-input-clear-icon qixian-input-clear-icon-hidden"
                              role="button"
                              tabindex="-1"
                            >
                              <span
                                aria-label="close-circle"
                                class="anticon anticon-close-circle"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="close-circle"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="qixian-col qixian-col-8 qixian-col-offset-8"
              style="padding-left: 12px; padding-right: 12px; text-align: right;"
            >
              <div
                class="qixian-form-item pro-form-query-filter-actions"
              >
                <div
                  class="qixian-row qixian-form-item-row"
                >
                  <div
                    class="qixian-col qixian-form-item-label"
                  >
                    <label
                      class="qixian-form-item-no-colon"
                      title=" "
                    >
                       
                    </label>
                  </div>
                  <div
                    class="qixian-col qixian-form-item-control"
                  >
                    <div
                      class="qixian-form-item-control-input"
                    >
                      <div
                        class="qixian-form-item-control-input-content"
                      >
                        <div
                          class="qixian-space qixian-space-horizontal qixian-space-align-center"
                        >
                          <div
                            class="qixian-space-item"
                          >
                            <div
                              class="qixian-space qixian-space-horizontal qixian-space-align-center"
                              style="flex-wrap: wrap; margin-bottom: -8px;"
                            >
                              <div
                                class="qixian-space-item"
                                style="margin-right: 8px; padding-bottom: 8px;"
                              >
                                <button
                                  class="qixian-btn qixian-btn-default"
                                  type="button"
                                >
                                  <span>
                                    重 置
                                  </span>
                                </button>
                              </div>
                              <div
                                class="qixian-space-item"
                                style="padding-bottom: 8px;"
                              >
                                <button
                                  class="qixian-btn qixian-btn-primary"
                                  type="button"
                                >
                                  <span>
                                    查 询
                                  </span>
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="qixian-pro-card"
    >
      <div
        class="qixian-pro-card-body"
        style="padding-top: 0px;"
      >
        <div
          class="qixian-pro-table-list-toolbar"
        >
          <div
            class="qixian-pro-table-list-toolbar-container"
          >
            <div
              class="qixian-pro-table-list-toolbar-left"
            />
            <div
              class="qixian-space qixian-space-horizontal qixian-space-align-center qixian-pro-table-list-toolbar-right"
            >
              <div
                class="qixian-space-item"
              >
                <div
                  class="qixian-space qixian-space-horizontal qixian-space-align-center qixian-pro-table-list-toolbar-setting-items"
                >
                  <div
                    class="qixian-space-item"
                    style="margin-right: 12px;"
                  >
                    <div
                      class="qixian-pro-table-list-toolbar-setting-item"
                    >
                      <span>
                        <span
                          aria-label="reload"
                          class="anticon anticon-reload"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="reload"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="qixian-space-item"
                    style="margin-right: 12px;"
                  >
                    <div
                      class="qixian-pro-table-list-toolbar-setting-item"
                    >
                      <span>
                        <span
                          aria-label="column-height"
                          class="anticon anticon-column-height qixian-dropdown-trigger"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="column-height"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M840 836H184c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h656c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zm0-724H184c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h656c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zM610.8 378c6 0 9.4-7 5.7-11.7L515.7 238.7a7.14 7.14 0 00-11.3 0L403.6 366.3a7.23 7.23 0 005.7 11.7H476v268h-62.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V378h62.8z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="qixian-space-item"
                  >
                    <div
                      class="qixian-pro-table-list-toolbar-setting-item"
                    >
                      <span
                        aria-label="setting"
                        class="anticon anticon-setting"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="setting"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="qixian-table-wrapper"
        >
          <div
            class="qixian-spin-nested-loading"
          >
            <div
              class="qixian-spin-container"
            >
              <div
                class="qixian-table qixian-table-small"
              >
                <div
                  class="qixian-table-container"
                >
                  <div
                    class="qixian-table-content"
                  >
                    <table
                      style="table-layout: auto;"
                    >
                      <colgroup />
                      <thead
                        class="qixian-table-thead"
                      >
                        <tr>
                          <th
                            class="qixian-table-cell"
                          >
                            Name
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="qixian-table-tbody"
                      >
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="0"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 0
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="1"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 1
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="2"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 2
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="3"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 3
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="4"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 4
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="5"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 5
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="6"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 6
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="7"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 7
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="8"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 8
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="9"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 9
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="10"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 10
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="11"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 11
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="12"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 12
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="13"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 13
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="14"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 14
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="15"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 15
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="16"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 16
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="17"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 17
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="18"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 18
                          </td>
                        </tr>
                        <tr
                          class="qixian-table-row qixian-table-row-level-0"
                          data-row-key="19"
                        >
                          <td
                            class="qixian-table-cell"
                          >
                            Edward King 19
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
              <ul
                class="qixian-pagination qixian-pagination-mini qixian-table-pagination qixian-table-pagination-right"
                unselectable="unselectable"
              >
                <li
                  class="qixian-pagination-total-text"
                >
                  第 1-20 条/总共 200 条
                </li>
                <li
                  aria-disabled="true"
                  class="qixian-pagination-prev qixian-pagination-disabled"
                  title="上一页"
                >
                  <button
                    class="qixian-pagination-item-link"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-label="left"
                      class="anticon anticon-left"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="left"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                        />
                      </svg>
                    </span>
                  </button>
                </li>
                <li
                  class="qixian-pagination-item qixian-pagination-item-1 qixian-pagination-item-active"
                  tabindex="0"
                  title="1"
                >
                  <a
                    rel="nofollow"
                  >
                    1
                  </a>
                </li>
                <li
                  class="qixian-pagination-item qixian-pagination-item-2"
                  tabindex="0"
                  title="2"
                >
                  <a
                    rel="nofollow"
                  >
                    2
                  </a>
                </li>
                <li
                  class="qixian-pagination-item qixian-pagination-item-3"
                  tabindex="0"
                  title="3"
                >
                  <a
                    rel="nofollow"
                  >
                    3
                  </a>
                </li>
                <li
                  class="qixian-pagination-item qixian-pagination-item-4"
                  tabindex="0"
                  title="4"
                >
                  <a
                    rel="nofollow"
                  >
                    4
                  </a>
                </li>
                <li
                  class="qixian-pagination-item qixian-pagination-item-5 qixian-pagination-item-before-jump-next"
                  tabindex="0"
                  title="5"
                >
                  <a
                    rel="nofollow"
                  >
                    5
                  </a>
                </li>
                <li
                  class="qixian-pagination-jump-next qixian-pagination-jump-next-custom-icon"
                  tabindex="0"
                  title="向后 5 页"
                >
                  <a
                    class="qixian-pagination-item-link"
                  >
                    <div
                      class="qixian-pagination-item-container"
                    >
                      <span
                        aria-label="double-right"
                        class="anticon anticon-double-right qixian-pagination-item-link-icon"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="double-right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
                          />
                        </svg>
                      </span>
                      <span
                        class="qixian-pagination-item-ellipsis"
                      >
                        •••
                      </span>
                    </div>
                  </a>
                </li>
                <li
                  class="qixian-pagination-item qixian-pagination-item-10"
                  tabindex="0"
                  title="10"
                >
                  <a
                    rel="nofollow"
                  >
                    10
                  </a>
                </li>
                <li
                  aria-disabled="false"
                  class="qixian-pagination-next"
                  tabindex="0"
                  title="下一页"
                >
                  <button
                    class="qixian-pagination-item-link"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-label="right"
                      class="anticon anticon-right"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="right"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                        />
                      </svg>
                    </span>
                  </button>
                </li>
                <li
                  class="qixian-pagination-options"
                >
                  <div
                    aria-label="页码"
                    class="qixian-select qixian-select-sm qixian-pagination-options-size-changer qixian-select-single qixian-select-show-arrow"
                  >
                    <div
                      class="qixian-select-selector"
                    >
                      <span
                        class="qixian-select-selection-search"
                      >
                        <input
                          aria-activedescendant="rc_select_1_list_0"
                          aria-autocomplete="list"
                          aria-controls="rc_select_1_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-label="页码"
                          aria-owns="rc_select_1_list"
                          autocomplete="off"
                          class="qixian-select-selection-search-input"
                          id="rc_select_1"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                      </span>
                      <span
                        class="qixian-select-selection-item"
                        title="20 条/页"
                      >
                        20 条/页
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="qixian-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down qixian-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table ColumnSetting 🎏 extra columns 1`] = `
<div
  class="ant-pro"
>
  <div
    class="ant-pro-table"
  >
    <div
      class="ant-pro-card ant-pro-table-search ant-pro-table-search-query-filter"
    >
      <div
        class="ant-pro"
      >
        <form
          autocomplete="off"
          class="ant-form ant-form-horizontal ant-pro-form-query-filter"
        >
          <input
            style="display: none;"
            type="text"
          />
          <div
            class="ant-row ant-row-start"
            style="margin-left: -12px; margin-right: -12px;"
          >
            <div
              class="ant-col ant-col-8"
              style="padding-left: 12px; padding-right: 12px;"
            >
              <div
                class="ant-form-item"
                style="flex-wrap: nowrap;"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label"
                    style="flex: 0 0 80px;"
                  >
                    <label
                      class=""
                      for="name"
                      title="Name"
                    >
                      Name
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                    style="max-width: calc(100% - 80px);"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <span
                          class="ant-input-affix-wrapper"
                          style="width: 100%;"
                        >
                          <input
                            class="ant-input"
                            id="name"
                            placeholder="请输入"
                            type="text"
                            value=""
                          />
                          <span
                            class="ant-input-suffix"
                          >
                            <span
                              class="ant-input-clear-icon ant-input-clear-icon-hidden"
                              role="button"
                              tabindex="-1"
                            >
                              <span
                                aria-label="close-circle"
                                class="anticon anticon-close-circle"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="close-circle"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-8 ant-col-offset-8"
              style="padding-left: 12px; padding-right: 12px; text-align: right;"
            >
              <div
                class="ant-form-item pro-form-query-filter-actions"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label"
                  >
                    <label
                      class="ant-form-item-no-colon"
                      title=" "
                    >
                       
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center"
                              style="flex-wrap: wrap; margin-bottom: -8px;"
                            >
                              <div
                                class="ant-space-item"
                                style="margin-right: 8px; padding-bottom: 8px;"
                              >
                                <button
                                  class="ant-btn ant-btn-default"
                                  type="button"
                                >
                                  <span>
                                    重 置
                                  </span>
                                </button>
                              </div>
                              <div
                                class="ant-space-item"
                                style="padding-bottom: 8px;"
                              >
                                <button
                                  class="ant-btn ant-btn-primary"
                                  type="button"
                                >
                                  <span>
                                    查 询
                                  </span>
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="ant-pro-card"
    >
      <div
        class="ant-pro-card-body"
        style="padding-top: 0px;"
      >
        <div
          class="ant-pro-table-list-toolbar"
        >
          <div
            class="ant-pro-table-list-toolbar-container"
          >
            <div
              class="ant-pro-table-list-toolbar-left"
            />
            <div
              class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
            >
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-setting-items"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <div
                      class="ant-pro-table-list-toolbar-setting-item"
                    >
                      <span>
                        <span
                          aria-label="reload"
                          class="anticon anticon-reload"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="reload"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <div
                      class="ant-pro-table-list-toolbar-setting-item"
                    >
                      <span>
                        <span
                          aria-label="column-height"
                          class="anticon anticon-column-height ant-dropdown-trigger"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="column-height"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M840 836H184c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h656c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zm0-724H184c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h656c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zM610.8 378c6 0 9.4-7 5.7-11.7L515.7 238.7a7.14 7.14 0 00-11.3 0L403.6 366.3a7.23 7.23 0 005.7 11.7H476v268h-62.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V378h62.8z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="ant-pro-table-list-toolbar-setting-item"
                    >
                      <span
                        aria-label="setting"
                        class="anticon anticon-setting"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="setting"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-table-wrapper"
        >
          <div
            class="ant-spin-nested-loading"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="ant-table ant-table-middle"
              >
                <div
                  class="ant-table-container"
                >
                  <div
                    class="ant-table-content"
                  >
                    <table
                      style="table-layout: auto;"
                    >
                      <colgroup>
                        <col />
                        <col
                          class="ant-table-expand-icon-col"
                        />
                        <col
                          class="ant-table-selection-col"
                        />
                      </colgroup>
                      <thead
                        class="ant-table-thead"
                      >
                        <tr>
                          <th
                            class="ant-table-cell"
                          >
                            Name
                          </th>
                          <th
                            class="ant-table-cell ant-table-row-expand-icon-cell"
                          />
                          <th
                            class="ant-table-cell ant-table-selection-column"
                          >
                            <div
                              class="ant-table-selection"
                            >
                              <label
                                class="ant-checkbox-wrapper"
                              >
                                <span
                                  class="ant-checkbox"
                                >
                                  <input
                                    class="ant-checkbox-input"
                                    type="checkbox"
                                    value=""
                                  />
                                  <span
                                    class="ant-checkbox-inner"
                                  />
                                </span>
                              </label>
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="ant-table-tbody"
                      >
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="1"
                        >
                          <td
                            class="ant-table-cell"
                          >
                            Name 1
                          </td>
                          <td
                            class="ant-table-cell ant-table-row-expand-icon-cell"
                          >
                            <button
                              aria-label="展开行"
                              class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                              type="button"
                            />
                          </td>
                          <td
                            class="ant-table-cell ant-table-selection-column"
                          >
                            <label
                              class="ant-checkbox-wrapper"
                            >
                              <span
                                class="ant-checkbox"
                              >
                                <input
                                  class="ant-checkbox-input"
                                  type="checkbox"
                                  value=""
                                />
                                <span
                                  class="ant-checkbox-inner"
                                />
                              </span>
                            </label>
                          </td>
                        </tr>
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="2"
                        >
                          <td
                            class="ant-table-cell"
                          >
                            Name 2
                          </td>
                          <td
                            class="ant-table-cell ant-table-row-expand-icon-cell"
                          >
                            <button
                              aria-label="展开行"
                              class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                              type="button"
                            />
                          </td>
                          <td
                            class="ant-table-cell ant-table-selection-column"
                          >
                            <label
                              class="ant-checkbox-wrapper"
                            >
                              <span
                                class="ant-checkbox"
                              >
                                <input
                                  class="ant-checkbox-input"
                                  type="checkbox"
                                  value=""
                                />
                                <span
                                  class="ant-checkbox-inner"
                                />
                              </span>
                            </label>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
              <ul
                class="ant-pagination ant-pagination-mini ant-table-pagination ant-table-pagination-right"
                unselectable="unselectable"
              >
                <li
                  class="ant-pagination-total-text"
                >
                  第 1-2 条/总共 2 条
                </li>
                <li
                  aria-disabled="true"
                  class="ant-pagination-prev ant-pagination-disabled"
                  title="上一页"
                >
                  <button
                    class="ant-pagination-item-link"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-label="left"
                      class="anticon anticon-left"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="left"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                        />
                      </svg>
                    </span>
                  </button>
                </li>
                <li
                  class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                  tabindex="0"
                  title="1"
                >
                  <a
                    rel="nofollow"
                  >
                    1
                  </a>
                </li>
                <li
                  aria-disabled="true"
                  class="ant-pagination-next ant-pagination-disabled"
                  title="下一页"
                >
                  <button
                    class="ant-pagination-item-link"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-label="right"
                      class="anticon anticon-right"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="right"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                        />
                      </svg>
                    </span>
                  </button>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
